force-app/main/default/objects/CLQ_Building_Approval__c/CLQ_Building_Approval__c.object-meta.xml
<CustomObject>
    <label>Building/Food/Fire Approval</label>
    <nameField>
        <displayFormat>BD-{00000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Building/Food/Fire Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>