force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approval_Date__c</fullName>
    <description>Date the building approval was granted</description>
    <inlineHelpText>Date the building approval was granted</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>