force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Building_Department__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Building_Department__c</fullName>
    <description>Building Department field to replace Name and be not required.</description>
    <label>Building Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>