force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Fire_Inspection_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Fire_Inspection_Approval_Type__c</fullName>
    <label>Fire Inspection Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>