force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Fire_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Fire_Inspection_Date__c</fullName>
    <label>Fire Inspection Date</label>
    <type>Date</type>
</CustomField>