force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Food_License_Exemption__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Food_License_Exemption__c</fullName>
    <label>Food License/Exemption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level I</fullName>
            </value>
            <value>
                <fullName>Level II</fullName>
            </value>
            <value>
                <fullName>Level III</fullName>
            </value>
            <value>
                <fullName>Level IV</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>