force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Health_Department__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Health_Department__c</fullName>
    <label>Health Department</label>
    <length>250</length>
    <type>Text</type>
</CustomField>