force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>CLQ_Inspection__c</referenceTo>
    <relationshipName>Building_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>