force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Maximum_Occupancy_Limit__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Maximum_Occupancy_Limit__c</fullName>
    <description>Maximum number of people allowed in the structure.</description>
    <inlineHelpText>Maximum number of people allowed in the structure.</inlineHelpText>
    <label>Maximum Occupancy Limit</label>
    <length>4</length>
    <type>Text</type>
</CustomField>