force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Maximum_Occupancy_Under_2_1_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Maximum_Occupancy_Under_2_1_2__c</fullName>
    <description>Maximum number of people allowed in the structure under the age of 2 1/2.</description>
    <inlineHelpText>Maximum number of people allowed in the structure under the age of 2 1/2.</inlineHelpText>
    <label>Maximum Occupancy Under 2 1/2</label>
    <length>4</length>
    <type>Text</type>
</CustomField>