force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Maximum_Occupancy_Under_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Maximum_Occupancy_Under_2__c</fullName>
    <label>Maximum Occupancy Under 2</label>
    <length>4</length>
    <type>Text</type>
</CustomField>