force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Building/Food/Fire Approvals</relationshipLabel>
    <relationshipName>Building_Food_Fire_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>