force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Structure_Name_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Structure_Name_Description__c</fullName>
    <label>Structure Name/Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>