force-app/main/default/objects/CLQ_Building_Approval__c/fields/CLQ_Use_Group_Building_Code__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Use_Group_Building_Code__c</fullName>
    <description>Select the appropriate building code or use group.</description>
    <inlineHelpText>Select the appropriate building code or use group.</inlineHelpText>
    <label>Use Group/Building Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>E with I-2</fullName>
            </value>
            <value>
                <fullName>I-2</fullName>
            </value>
            <value>
                <fullName>I-4</fullName>
            </value>
            <value>
                <fullName>A-3</fullName>
            </value>
            <value>
                <fullName>A-4</fullName>
            </value>
            <value>
                <fullName>BB 303 (pre 1970)</fullName>
            </value>
            <value>
                <fullName>BB 57 (1970-1972)</fullName>
            </value>
            <value>
                <fullName>BB 61 (1972-1979)</fullName>
            </value>
            <value>
                <fullName>B Occ. – 49</fullName>
            </value>
            <value>
                <fullName>School Building</fullName>
            </value>
            <value>
                <fullName>NV</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>