force-app/main/default/objects/CLQ_Building_Approval__c/validationRules/CLQ_Fire_Insp_Date_cant_be_in_the_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_Fire_Insp_Date_cant_be_in_the_Future</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; CLQ_Fire_Inspection_Date__c &gt;   TODAY()</errorConditionFormula>
    <errorDisplayField>CLQ_Fire_Inspection_Date__c</errorDisplayField>
    <errorMessage>Fire Inspection Date cannot be in the Future</errorMessage>
</ValidationRule>